k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alethic-ism-query-api-service
  namespace: alethic
spec:
  selector:
    app: alethic-ism-query-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alethic-ism-query-api
  namespace: alethic
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://ism.quantumwake.io, http://localhost:3000, http://localhost:3001"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - api.ism.quantumwake.io
      secretName: api.ism.quantumwake.io
  rules:
    - host: api.ism.quantumwake.io
      http:
        paths:
          - path: /api/v1/state/query
            pathType: Prefix
            backend:
              service:
                name: alethic-ism-query-api-service
                port:
                  number: 80
          - path: /api/v1/vault
            pathType: Prefix
            backend:
              service:
                name: alethic-ism-query-api-service
                port:
                  number: 80
          - path: /api/v1/nlp/embeddings
            pathType: Prefix
            backend:
              service:
                name: alethic-ism-query-api-service
                port:
                  number: 80
  ingressClassName: nginx
